<?xml version="1.0" encoding="utf-8"?>
<com.xavierlepretre.hackernewsbrowser.ItemView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.ListItem.Unknown"
    >

  <LinearLayout
      android:id="@android:id/extractArea"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      >

    <ImageView
        android:layout_width="@dimen/small_icon_size"
        android:layout_height="@dimen/small_icon_size"
        android:layout_marginRight="@dimen/item_horizontal_padding"
        android:layout_marginEnd="@dimen/item_horizontal_padding"
        android:src="@mipmap/user"
        android:contentDescription="@string/user_icon_description"
        />

    <TextView
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppThemeCaption"
        tools:text="jg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end|center_vertical"
        >

      <TextView
          android:id="@+id/age"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/AppThemeCaption"
          tools:text="1 minute ago"
          />

      <ImageView
          android:layout_width="@dimen/small_icon_size"
          android:layout_height="@dimen/small_icon_size"
          android:src="@mipmap/time"
          android:layout_marginLeft="@dimen/item_horizontal_padding"
          android:layout_marginStart="@dimen/item_horizontal_padding"
          android:contentDescription="@string/age_icon_description"
          />

      <ImageView
          android:id="@android:id/button1"
          android:layout_width="48dp"
          android:layout_height="wrap_content"
          android:src="@mipmap/world"
          android:visibility="gone"
          android:contentDescription="@string/open_in_browser_description"
          tools:visibility="visible"
          />

    </LinearLayout>

  </LinearLayout>

</com.xavierlepretre.hackernewsbrowser.ItemView>